vlib/v/checker/tests/enum_field_value_duplicate_a.vv
enum Color {
	red
	green = 0
	blue  = 1
	alpha = 1
}
